{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 118,
  "lineage": "d8635eb2-cbf4-7e0a-3e67-d574bdd5d762",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mwaa_nat_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061303a5812186fbf",
            "arn": "arn:aws:ec2:us-east-1:236510206723:elastic-ip/eipalloc-061303a5812186fbf",
            "association_id": "eipassoc-0126163fc6f76ae9a",
            "domain": "vpc",
            "id": "eipalloc-061303a5812186fbf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ef9dee316ad268e1",
            "private_dns": "ip-10-0-1-188.ec2.internal",
            "private_ip": "10.0.1.188",
            "public_dns": "ec2-44-219-153-33.compute-1.amazonaws.com",
            "public_ip": "44.219.153.33",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "MWAA NAT Gateway EIP 1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA NAT Gateway EIP 1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mwaa_nat_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f93b6c4a5e49a3d3",
            "arn": "arn:aws:ec2:us-east-1:236510206723:elastic-ip/eipalloc-0f93b6c4a5e49a3d3",
            "association_id": "eipassoc-0ff5cff7d9a09812b",
            "domain": "vpc",
            "id": "eipalloc-0f93b6c4a5e49a3d3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07286bb44eec47ba4",
            "private_dns": "ip-10-0-2-213.ec2.internal",
            "private_ip": "10.0.2.213",
            "public_dns": "ec2-100-50-46-52.compute-1.amazonaws.com",
            "public_ip": "100.50.46.52",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "MWAA NAT Gateway EIP 2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA NAT Gateway EIP 2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mwaa_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236510206723:internet-gateway/igw-032114a03399c2f0c",
            "id": "igw-032114a03399c2f0c",
            "owner_id": "236510206723",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "MWAA Internet Gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA Internet Gateway"
            },
            "vpc_id": "vpc-0a0a6ee4a55c8691b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mwaa_nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061303a5812186fbf",
            "association_id": "eipassoc-0126163fc6f76ae9a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06b3cf33ac49dc9be",
            "network_interface_id": "eni-0ef9dee316ad268e1",
            "private_ip": "10.0.1.188",
            "public_ip": "44.219.153.33",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ce0842acbad321d3",
            "tags": {
              "Environment": "dev",
              "Name": "MWAA NAT Gateway 1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA NAT Gateway 1"
            },
            "vpc_id": "vpc-0a0a6ee4a55c8691b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mwaa_nat_eip_1",
            "aws_internet_gateway.mwaa_igw",
            "aws_subnet.mwaa_public_subnet_1",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mwaa_nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f93b6c4a5e49a3d3",
            "association_id": "eipassoc-0ff5cff7d9a09812b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-07df277e95560ee55",
            "network_interface_id": "eni-07286bb44eec47ba4",
            "private_ip": "10.0.2.213",
            "public_ip": "100.50.46.52",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03631b35f4edcc179",
            "tags": {
              "Environment": "dev",
              "Name": "MWAA NAT Gateway 2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA NAT Gateway 2"
            },
            "vpc_id": "vpc-0a0a6ee4a55c8691b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mwaa_nat_eip_2",
            "aws_internet_gateway.mwaa_igw",
            "aws_subnet.mwaa_public_subnet_2",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mwaa_private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236510206723:route-table/rtb-0b2ae5ec17ebc67e5",
            "id": "rtb-0b2ae5ec17ebc67e5",
            "owner_id": "236510206723",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06b3cf33ac49dc9be",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "MWAA Private Route Table 1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA Private Route Table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0a6ee4a55c8691b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236510206723",
            "id": "rtb-0b2ae5ec17ebc67e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.mwaa_nat_eip_1",
            "aws_internet_gateway.mwaa_igw",
            "aws_nat_gateway.mwaa_nat_1",
            "aws_subnet.mwaa_public_subnet_1",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mwaa_private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236510206723:route-table/rtb-049eaf781c75515ee",
            "id": "rtb-049eaf781c75515ee",
            "owner_id": "236510206723",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07df277e95560ee55",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "MWAA Private Route Table 2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA Private Route Table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0a6ee4a55c8691b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236510206723",
            "id": "rtb-049eaf781c75515ee",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.mwaa_nat_eip_2",
            "aws_internet_gateway.mwaa_igw",
            "aws_nat_gateway.mwaa_nat_2",
            "aws_subnet.mwaa_public_subnet_2",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mwaa_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236510206723:route-table/rtb-0f642492a1038ab42",
            "id": "rtb-0f642492a1038ab42",
            "owner_id": "236510206723",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032114a03399c2f0c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "MWAA Public Route Table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0a6ee4a55c8691b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236510206723",
            "id": "rtb-0f642492a1038ab42",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.mwaa_igw",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mwaa_private_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab8db34dbccf0c60",
            "region": "us-east-1",
            "route_table_id": "rtb-0b2ae5ec17ebc67e5",
            "subnet_id": "subnet-0ef827699abf702e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mwaa_nat_eip_1",
            "aws_internet_gateway.mwaa_igw",
            "aws_nat_gateway.mwaa_nat_1",
            "aws_route_table.mwaa_private_rt_1",
            "aws_subnet.mwaa_private_subnet_1",
            "aws_subnet.mwaa_public_subnet_1",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mwaa_private_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7e62f472f0c887f",
            "region": "us-east-1",
            "route_table_id": "rtb-049eaf781c75515ee",
            "subnet_id": "subnet-0ebf3a558ad86d19f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mwaa_nat_eip_2",
            "aws_internet_gateway.mwaa_igw",
            "aws_nat_gateway.mwaa_nat_2",
            "aws_route_table.mwaa_private_rt_2",
            "aws_subnet.mwaa_private_subnet_2",
            "aws_subnet.mwaa_public_subnet_2",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mwaa_public_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e771afcabff25ee",
            "region": "us-east-1",
            "route_table_id": "rtb-0f642492a1038ab42",
            "subnet_id": "subnet-0ce0842acbad321d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.mwaa_igw",
            "aws_route_table.mwaa_public_rt",
            "aws_subnet.mwaa_public_subnet_1",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mwaa_public_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080abfe2d37734768",
            "region": "us-east-1",
            "route_table_id": "rtb-0f642492a1038ab42",
            "subnet_id": "subnet-03631b35f4edcc179"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.mwaa_igw",
            "aws_route_table.mwaa_public_rt",
            "aws_subnet.mwaa_public_subnet_2",
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mwaa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236510206723:security-group/sg-0aee570e2eb3f56e3",
            "description": "Security group for MWAA environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aee570e2eb3f56e3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "mwaa-security-group",
            "name_prefix": "",
            "owner_id": "236510206723",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "MWAA Security Group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0a6ee4a55c8691b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236510206723",
            "id": "sg-0aee570e2eb3f56e3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mwaa_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236510206723:subnet/subnet-0ef827699abf702e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef827699abf702e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236510206723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "MWAA Private Subnet 1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA Private Subnet 1"
            },
            "vpc_id": "vpc-0a0a6ee4a55c8691b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236510206723",
            "id": "subnet-0ef827699abf702e4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mwaa_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236510206723:subnet/subnet-0ebf3a558ad86d19f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebf3a558ad86d19f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "236510206723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "MWAA Private Subnet 2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA Private Subnet 2"
            },
            "vpc_id": "vpc-0a0a6ee4a55c8691b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236510206723",
            "id": "subnet-0ebf3a558ad86d19f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mwaa_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236510206723:subnet/subnet-0ce0842acbad321d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce0842acbad321d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236510206723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "MWAA Public Subnet 1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA Public Subnet 1"
            },
            "vpc_id": "vpc-0a0a6ee4a55c8691b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236510206723",
            "id": "subnet-0ce0842acbad321d3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mwaa_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236510206723:subnet/subnet-03631b35f4edcc179",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03631b35f4edcc179",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "236510206723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "MWAA Public Subnet 2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA Public Subnet 2"
            },
            "vpc_id": "vpc-0a0a6ee4a55c8691b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236510206723",
            "id": "subnet-03631b35f4edcc179",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.mwaa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mwaa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:236510206723:vpc/vpc-0a0a6ee4a55c8691b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041951f30223a2cdf",
            "default_route_table_id": "rtb-094bc599e2065068d",
            "default_security_group_id": "sg-05a503e60c307d2fa",
            "dhcp_options_id": "dopt-0d7ef03b0df2849f6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0a6ee4a55c8691b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-094bc599e2065068d",
            "owner_id": "236510206723",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "MWAA VPC",
              "Project": "MBA-Thesis-USP-Esalq"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MWAA VPC",
              "Project": "MBA-Thesis-USP-Esalq"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "236510206723",
            "id": "vpc-0a0a6ee4a55c8691b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}